--- a/plugin.yml
+++ b/plugin.yml
@@ -4,3 +4,11 @@ version: 1.0.0
 api: [2.0.0]
 author: NetworkGG team
 description: Put ur custom enchants and favorite gear in personal vaults!
+commands:
+   pv:
+      description: Main command
+permissions:
+     Vaults.*:
+      default: op
+      description: Allows them to access all pv commandas
+      
